[fix] [style] Disable blue highlight on mobile button clicks

--- a/src/app/static/styles/base.css
+++ b/src/app/static/styles/base.css
@@ -942,4 +942,8 @@ span.delete:hover {
         width: unset;
         min-width: unset;
     }
+
+    a {
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    }
 }
